Create Manager and GoogleMaps

--- a/PropertyManagementApp/Web.config
+++ b/PropertyManagementApp/Web.config
@@ -7,7 +7,11 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PropertyManagementApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+                                                                                                                      </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-PropertyManagementApp-20171103082532.mdf;Initial Catalog=aspnet-PropertyManagementApp-20171103082532;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -103,4 +107,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.8.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <applicationSettings>
+    <PropertyManagementApp.Properties.Settings>
+      <setting name="GeoCodeApiKey" serializeAs="String">
+        <value>AIzaSyDBQ0bI2v5FnfmC4o7RgWX9af9u03U-PDU	</value>
+      </setting>
+    </PropertyManagementApp.Properties.Settings>
+  </applicationSettings>
 </configuration>
