--- a/PropertyManagementApp/packages.config
+++ b/PropertyManagementApp/packages.config
@@ -37,7 +37,13 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net461" />
+  <package id="RestSharp" version="106.0.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
